# sqlpp11-connector-mysql

./: CMakeLists.txt  libsqlpp11-connector-mysql.la.in  sqlpp11-connector-mysql.pc.in
cmake/: sqlpp11-connector-mysql-config.cmake
cmake/Hunter/: config.cmake
include/sqlpp11/mysql/: char_result.h  connection.h  mysql.h
src/: CMakeLists.txt  bind_result.cpp  char_result.cpp  connection.cpp  prepared_statement.cpp
src/detail/: connection_handle.cpp
tests/: CMakeLists.txt  DateTimeTest.cpp  DynamicSelectTest.cpp  MoveConstructorTest.cpp  PreparedTest.cpp  SampleTest.cpp  SelectTest.cpp  TruncatedTest.cpp  UnionTest.cpp
